--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,71 +13,71 @@ spring:
 spring:  
   profiles: dev
   redis:
-    database=1
-    host=192.168.10.162
-    password=trj123456
-    port=6379
-    pool.max-idle=8
-    pool.min-idle=0
-    pool.max-active=8
-    pool.max-wait=-1
-    timeout=60000
+    database: 1
+    host: 192.168.10.162
+    password: 
+    port: 6379
+    pool.max-idle: 8
+    pool.min-idle: 0
+    pool.max-active: 8
+    pool.max-wait: -1
+    timeout: 60000
   datasource:  
-      url:jdbc:mysql://192.168.10.80:3306/test?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useOldAliasMetadataBehavior=true
-    username=root
-    password=
-    driver-class-name=com.mysql.jdbc.Driver
-    max-active=20
-    max-wait=60000
-    initial-size=10
-    max-idle=10
-    min-idle=0
+    url: jdbc:mysql://192.168.10.80:3306/s?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useOldAliasMetadataBehavior=true
+    username: root
+    password: 
+    driver-class-name: com.mysql.jdbc.Driver
+    max-active: 20
+    max-wait: 60000
+    initial-size: 10
+    max-idle: 10
+    min-idle: 0
 ---  
 # 测试环境配置  
 spring:  
   profiles: test
   redis:
-    database=1
-    host=192.168.10.162
-    password=trj123456
-    port=6379
-    pool.max-idle=8
-    pool.min-idle=0
-    pool.max-active=8
-    pool.max-wait=-1
-    timeout=60000
+    database: 1
+    host: 192.168.10.162
+    password: 
+    port: 6379
+    pool.max-idle: 8
+    pool.min-idle: 0
+    pool.max-active: 8
+    pool.max-wait: -1
+    timeout: 60000
   datasource:  
-    url:jdbc:mysql://192.168.10.80:3306/test?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useOldAliasMetadataBehavior=true
-    username=root
-    password=
-    driver-class-name=com.mysql.jdbc.Driver
-    max-active=20
-    max-wait=60000
-    initial-size=10
-    max-idle=10
-    min-idle=0
+    url: jdbc:mysql://192.168.10.80:3306/s?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useOldAliasMetadataBehavior=true
+    username: root
+    password: 
+    driver-class-name: com.mysql.jdbc.Driver
+    max-active: 20
+    max-wait: 60000
+    initial-size: 10
+    max-idle: 10
+    min-idle: 0
     
 ---  
 # 生产环境配置  
 spring:  
   profiles: pro
   redis:
-    database=1
-    host=192.168.10.162
-    password=trj123456
-    port=6379
-    pool.max-idle=8
-    pool.min-idle=0
-    pool.max-active=8
-    pool.max-wait=-1
-    timeout=60000
+    database: 1
+    host: 192.168.10.162
+    password: 
+    port: 6379
+    pool.max-idle: 8
+    pool.min-idle: 0
+    pool.max-active: 8
+    pool.max-wait: -1
+    timeout: 60000
   datasource:  
-    url:jdbc:mysql://192.168.10.80:3306/test?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useOldAliasMetadataBehavior=true
-    username=root
-    password=
-    driver-class-name=com.mysql.jdbc.Driver
-    max-active=20
-    max-wait=60000
-    initial-size=10
-    max-idle=10
-    min-idle=0
+    url: jdbc:mysql://192.168.10.80:3306/s?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useOldAliasMetadataBehavior=true
+    username: root
+    password: 
+    driver-class-name: com.mysql.jdbc.Driver
+    max-active: 20
+    max-wait: 60000
+    initial-size: 10
+    max-idle: 10
+    min-idle: 0
